fix spark job submission